--- a/Website Front end.html
+++ b/Website Front end.html
@@ -169,7 +169,7 @@
 
     <script>
         const pdfFiles = {
-    "ABHAYJITH": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/ABHAYJITH.pdf",
+    "ABHAYJITH": "https://files.yappe.in/place/full/pulimathoor-mahadeva-temple-9984549.webp",
     "ABHIJITH": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/ABHIJITH.pdf",
     "ABHIMANYU": "file:///D:/Kalakshethra%20chenda%20class/PENDING%20FEE%20REPORT/ABHIMANYU.pdf",
     "ABHINAV KIRAN": "https://github.com/Rahulkrishnanj/Kalaakshethra/issues/1#issue-2662964075",
